:construction: implement get endpoint for retrieving groups
