# application/src/main/java/at/ac/tuwien/inso/actconawa/dto/GitCommitGroupDto.java
@@ -1,0 +1,18 @@
+package at.ac.tuwien.inso.actconawa.dto;
+
+import java.io.Serializable;
+import java.util.UUID;
+
+
+public class GitCommitGroupDto implements Serializable {
+
+    private UUID id;
+
+    public UUID getId() {
+        return id;
+    }
+
+    public void setId(UUID id) {
+        this.id = id;
+    }
+}
